<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout_account_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:orientation="vertical">


        <View style="@style/line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/common_size_10"
                android:paddingRight="@dimen/common_size_10"
                android:text="@string/phone_number"
                android:textColor="@color/colorContent"
                android:textSize="@dimen/font_size_17" />

            <EditText
                android:id="@+id/phone_edit"
                style="@style/combination_right_edittext_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/tv_phone"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/input_your_number"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/common_size_10"
                android:textSize="@dimen/font_size_17" />
        </RelativeLayout>


        <View style="@style/line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_password"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/common_size_10"
                android:paddingRight="@dimen/common_size_10"
                android:text="@string/new_password"
                android:textColor="@color/colorContent"
                android:textSize="@dimen/font_size_17" />

            <EditText
                android:id="@+id/password_edit"
                style="@style/combination_right_edittext_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toRightOf="@+id/tv_password"
                android:digits="@string/password_rule_digits"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/password_rule"
                android:inputType="textPassword"
                android:maxLength="15"
                android:paddingLeft="@dimen/common_size_10"
                android:textSize="@dimen/font_size_17" />
        </RelativeLayout>


        <View style="@style/line" />

        <com.cg.mrice.view.CountdownInputBoxView
            android:id="@+id/countdown_inputbox"
            style="@style/combination_right_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:paddingLeft="@dimen/common_size_15"
            android:visibility="visible" />

        <View style="@style/line" />
    </LinearLayout>

    <Button
        android:id="@+id/modifyPwd"
        style="@style/style_commont_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:text="@string/modifyPwd" />
</LinearLayout>
